--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
 
   <head>
@@ -20,7 +20,7 @@
             <span class = "blue">NodeJS Starter Application</span>.
             Get started by reading our
             <a href = "https://www.ng.bluemix.net/docs/#starters/nodejs/index.html#nodejs">documentation</a>
-            or use the Start Coding guide under your app in your dashboard.
+            or use the Start Coding guide under your app in your dashboard. Test update
     </table>
   </body>
 
